Moved styles to single folder.

--- a/MetricsDisplayApp.html
+++ b/MetricsDisplayApp.html
@@ -3,7 +3,7 @@
 	<meta charset="utf-8">
 	<!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-	<link rel="stylesheet" href="CSS/MetricsDisplayApp.css">
+	<link rel="stylesheet" href="Styles/MetricsDisplayApp.css">
 </head>
 <body>
 <div id="pageContainer" class="container-fluid"></div>
