Removed chart tooltips and added animation.

--- a/MetricsDisplayApp.html
+++ b/MetricsDisplayApp.html
@@ -47,6 +47,6 @@
 		</div>
 	</script>
 	<script src="requireConfig.js"></script>
-	<script data-main="init.js" src="Libraries/require.js"></script>
+	<script data-main="../init.js" src="Libraries/require.js"></script>
 </footer>
 </body>
