Fixed user card alignment.

--- a/MetricsDisplayApp.html
+++ b/MetricsDisplayApp.html
@@ -41,7 +41,7 @@
 		</div>
 	</script>
 	<script type="text/template" id="chartTemplate">
-		<div class="chartContainer">
+		<div class="chartWrapper">
 			<div class="canvasWrapper"></div>
 			<div class="chartText"></div>
 		</div>
